[gd_scene load_steps=13 format=3 uid="uid://cfn5bqa5d0ucl"]

[ext_resource type="Script" path="res://Components/Moments/add_comment.gd" id="1_7bt3c"]
[ext_resource type="Texture2D" uid="uid://u5uvm5snnfq6" path="res://UITextures/PanelElements/difficulty_bg.png" id="1_pg5s1"]
[ext_resource type="FontFile" uid="uid://d4hkhl2bcn0ty" path="res://UITextures/Fonts/HankenGrotesk-ExtraBold.ttf" id="2_ue0nf"]
[ext_resource type="FontFile" uid="uid://cbqgl5ybh1snb" path="res://UITextures/Fonts/argentum-sans.vf-regular.ttf" id="3_cm0dv"]
[ext_resource type="Texture2D" uid="uid://bhnx7lhb6qxue" path="res://UITextures/Buttons/Empty_button.png" id="4_mv1wn"]
[ext_resource type="PackedScene" uid="uid://c3q3fqqfdkrw" path="res://Components/LoadingComponents/filter_panel.tscn" id="5_btp8q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8y37"]
bg_color = Color(0, 0, 0, 0.72549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8quj7"]
bg_color = Color(0, 0.0588235, 0.0588235, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.486275, 0.486275, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2mha"]
bg_color = Color(0.0156863, 0.113725, 0.113725, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1iw7u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1idfd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3gg8e"]

[node name="AddComment" type="Control"]
z_index = 2
custom_minimum_size = Vector2(450, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bt3c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v8y37")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -96.5
offset_right = 185.5
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8quj7")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -32.0
offset_right = 15.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
texture = ExtResource("1_pg5s1")
expand_mode = 1
stretch_mode = 6

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8quj7")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Panel/HBoxContainer/Panel/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
texture = ExtResource("1_pg5s1")
expand_mode = 1
stretch_mode = 6

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/Panel/HBoxContainer/TextureRect"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -26.0
offset_right = 90.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("2_ue0nf")
theme_override_font_sizes/font_size = 24
text = "Add Comment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0269542
anchor_top = 0.139896
anchor_right = 0.97035
anchor_bottom = 0.958549
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p2mha")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="CommentTextEdit" type="TextEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("3_cm0dv")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_1iw7u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1idfd")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3gg8e")
placeholder_text = "Add your comment"
wrap_mode = 1
autowrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 2

[node name="CharacterCount" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.87451, 0.87451, 0.87451, 1)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_ue0nf")
theme_override_font_sizes/font_size = 12
text = "0  / 160"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SubmitButton" type="TextureButton" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(113, 35)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
texture_normal = ExtResource("4_mv1wn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/SubmitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_ue0nf")
theme_override_font_sizes/font_size = 12
text = "SUBMIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FilterPanel" parent="." instance=ExtResource("5_btp8q")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1200.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/Panel/VBoxContainer/CommentTextEdit" to="." method="_on_comment_text_edit_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
